$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.342 2006/04/19 11:15:43 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.62
-----------------

TF/01 Fix the add_header change below (4.61 PH/55) which had a bug that (amongst
      other effects) broke the use of negated acl sub-conditions.

PH/01 ${readsocket now supports Internet domain sockets (modified John Jetmore
      patch).

PH/02 When tcp-wrappers is called from Exim, it returns only "deny" or "allow".
      "Deny" causes Exim to reject the incoming connection with a 554 error.
      Unfortunately, if there is a major crisis, such as a disk failure,
      tcp-wrappers gives "deny", whereas what one would like would be some
      kind of temporary error. A kludge has been added to help with this.
      Before calling hosts_ctl(), errno is set zero. If the result is "deny", a
      554 error is used if errno is still zero or contains ENOENT (which occurs
      if either of the /etc/hosts.{allow,deny} files is missing). Otherwise, a
      451 error is used.

PH/03 Add -lutil to the default FreeBSD LIBS setting.


Exim version 4.61
-----------------

PH/01 The code for finding all the local interface addresses on a FreeBSD
      system running IPv6 was broken. This may well have applied to all BSD
      systems, as well as to others that have similar system calls. The broken
      code found IPv4 interfaces correctly, but gave incorrect values for the
      IPv6 interfaces. In particular, ::1 was not found. The effect in Exim was
      that it would not match correctly against @[] and not recognize the IPv6
      addresses as local.

PH/02 The ipliteral router was not recognizing addresses of the form user@
      [ipv6:....] because it didn't know about the "ipv6:" prefix.

PH/03 Added disable_ipv6.

PH/04 Changed $reply_address to use the raw form of the headers instead of the